--- a/SciFiConsoleWpf/packages.config
+++ b/SciFiConsoleWpf/packages.config
@@ -1,14 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AForge" version="2.2.5" targetFramework="net472" />
+  <package id="AForge.Video" version="2.2.5" targetFramework="net472" />
+  <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="GMap.NET.Core" version="2.1.7" targetFramework="net472" />
   <package id="GMap.NET.WinPresentation" version="2.1.7" targetFramework="net472" />
+  <package id="LibVLCSharp" version="3.9.4" targetFramework="net472" />
+  <package id="LibVLCSharp.WPF" version="3.9.4" targetFramework="net472" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.2" targetFramework="net472" />
+  <package id="Microsoft.NETCore.Targets" version="1.1.4" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.4" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
   <package id="System.Data.SqlClient" version="4.8.6" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.119.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.119.0" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.119.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.119.0" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.6.3" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.6.1" targetFramework="net472" />
+  <package id="System.Private.Uri" version="4.3.2" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.1.2" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net472" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
+  <package id="VideoLAN.LibVLC.Windows" version="3.0.21" targetFramework="net472" />
 </packages>
